# bulwark-monorepo

./: .gitignore  EMAIL_FIELD_ANALYSIS.md  README.md  package-lock.json  tailwind.config.ts
.github/workflows/: deploy.yml
admin/: README.md  next.config.js  package-lock.json
admin/src/app/: globals.css  page.tsx
admin/src/components/: AccountLinking.tsx  AuthButtons.tsx
analyzer/: .gitignore  Cargo.toml  README.md  debug_dependencies.sh  debug_test.rs  test_contract.rs
analyzer/.github/workflows/: deploy.yml
analyzer/src/: analysis.rs  config.rs  error.rs  lib.rs  metrics.rs  output.rs  patterns.rs  visitor.rs
analyzer/src/factors/: access_control.rs  arithmetic.rs  asset_types.rs  complexity.rs  composability.rs  cpi_calls.rs  dependencies.rs  dos_resource_limits.rs  error_handling.rs  external_integration.rs  function_count.rs  input_constraints.rs  invariants_risk_params.rs  lines_of_code.rs  mod.rs  modularity.rs  operational_security.rs  oracle_price_feed.rs  pda_seeds.rs  privileged_roles.rs  statefulness.rs  unsafe_lowlevel.rs  upgradeability.rs
backend/: .env.prod  .gitignore  AI_README.md  ANALYTICS_README.md  Dockerfile  EXPORT_UPDATE_SUMMARY.md  README.md  SAMPLE_EXPORT_PREVIEW.md  SCOPING_README.md  UPLOADS_README.md  complexity_factors_breakdown.csv  ecosystem.config.js  ecosystem.production.config.js  ecosystem.staging.config.js  env.example  nest-cli.json  package-lock.json  package.json  start.sh  tsconfig.build.json  tsconfig.json
backend/.github/workflows/: deploy.yml
backend/src/: app.controller.ts  app.module.ts  main.ts
backend/src/ai/: ai.module.ts  ai.service.ts
backend/src/ai-analysis/: ai-analysis.module.ts  ai-analysis.service.ts
backend/src/arcium-storage/: arcium-storage.module.ts  arcium-storage.service.ts
backend/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts  oauth-callback.service.ts
backend/src/database/: database.module.ts
backend/src/github/: github.service.ts
backend/src/scoping/: scoping.controller.ts  scoping.module.ts  scoping.service.ts
backend/src/static-analysis/: rust-analyzer.service.ts  shared-workspace.util.ts  static-analysis.controller.ts  static-analysis.module.ts  static-analysis.service.ts  static-analysis.utils.ts
backend/src/test/: test.controller.ts  test.module.ts  test.service.ts
backend/src/uploads/: uploads.controller.ts  uploads.module.ts  uploads.service.ts
backend/src/users/: user.module.ts  user.service.ts
backend/src/whitelist/: whitelist.controller.ts  whitelist.module.ts  whitelist.service.ts
backend/temp/extracted/stakera-audit-main-1761757460732/stakera-audit-main/stakera/programs/lottery/: Cargo.toml
contract/: Anchor.toml  Cargo.toml  README.md
contract/encrypted-ixs/src/: lib.rs
contract/examples/: basic_usage.rs  mysecurity_integration.rs
contract/programs/bulwark_storage/: Cargo.toml
contract/programs/bulwark_storage/src/: lib.rs
contract/scripts/: init_computation_defs.ts
contract/src/: client.rs  lib.rs
contract/tests/: bulwark_storage.ts  simple_test.ts
frontend/: .prettierrc  Dockerfile  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend-poc/: package-lock.json  package.json
frontend-poc/src/app/: layout.tsx  page.tsx
frontend-poc/src/components/: AccountLinking.tsx  AuthButtons.tsx  UserProfile.tsx  UserProfileWithRefresh.tsx
frontend-poc/src/hooks/: useCurrentUser.ts
frontend-poc/src/lib/: auth.ts
frontend/.github/types/: highlight.d.ts
frontend/.github/workflows/: deploy.yml
frontend/public/videos/: AnalyzerLoader.webm
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ColorExamples.tsx  ContractFileSelector.tsx  ExportModal.tsx  FolderUpload.tsx  GitHubAuth.tsx  NavBar.tsx  ReportDisplay.tsx  RepositorySelector.tsx  StandardImage.tsx  StaticAnalysisReportDisplay.tsx  ThemeToggle.tsx  UploadedContractFileSelector.tsx
frontend/src/constants/: navbar.ts  ui.ts
frontend/src/hooks/: index.ts  useAnalysisAnimator.ts  useAnalysisFlow.ts  useAuthWatcher.ts  useGitHubAuth.ts  useGitHubFlow.tsx  useUploadFlow.ts
frontend/src/lib/: firebase.ts
frontend/src/services/: api.ts
frontend/src/store/: store.ts
frontend/src/styles/: tokens.css
program/: .gitignore  Anchor.toml  README.md
program/tests/: bulwark_simple_test.ts  bulwark_storage.ts
public/: README.md
public/videos/: BulwarkSearchBg.webm  rounds.webm
src/app/: page.tsx
src/components/: ExportModal.tsx  ReportDisplay.tsx  StaticAnalysisReportDisplay.tsx  ThemeToggle.tsx
src/constants/: navbar.ts
src/hooks/: index.ts
src/types/: api.ts
(+203 files in other folders)
