[workspace]
members = ["programs/*", "encrypted-ixs", "."]
resolver = "2"

[package]
name = "bulwark-storage"
version = "0.1.0"
edition = "2021"
description = "Confidential storage for audit analysis results using Arcium"
authors = ["MySecurity Team"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
[patch.crates-io]
proc-macro2 = { git = 'https://github.com/arcium-hq/proc-macro2.git' }
